<resources>
    <string name="app_name" translatable="false">Just Chatting</string>
    <string name="games">Games</string>
    <string name="popular">Popular</string>
    <string name="following">Following</string>
    <string name="downloads">Downloads</string>
    <string name="connection_error">Error connecting to the server. Please try again</string>
    <string name="sort">Sort</string>
    <string name="upload_date">Upload date</string>
    <string name="today">Today</string>
    <string name="this_week">This week</string>
    <string name="this_month">This month</string>
    <string name="all_time">All time</string>
    <string name="view_count">View count</string>
    <string name="period">Period</string>
    <string name="apply">Apply</string>
    <string name="sort_and_period">Sort by: %1$s. Period: %2$s</string>
    <string name="trending">Trending</string>
    <string name="live">Live</string>
    <string name="videos">Videos</string>
    <string name="clips">Clips</string>
    <string name="scroll_down">Scroll down</string>
    <string name="auto">Auto</string>
    <string name="source">Source</string>
    <string name="audio_only">Audio only</string>
    <string name="chat_only">Chat only</string>
    <string name="select_quality">Select quality</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading</string>
    <string name="downloaded">Download complete</string>
    <string name="uploaded_date">Uploaded %s</string>
    <string name="downloaded_date">Downloaded %s</string>
    <string name="welcome">Welcome</string>
    <string name="log_in">Log in</string>
    <string name="log_out">Log out</string>
    <string name="skip">Skip</string>
    <string name="specify_time">Specify time</string>
    <string name="from">From:</string>
    <string name="to">To:</string>
    <string name="duration">Duration: %s</string>
    <string name="invalid_time">Invalid time</string>
    <string name="from_is_greater">Time From must be less than To</string>
    <string name="to_is_lesser">Time To must be greater than From</string>
    <string name="to_is_longer">To can\'t be greater than video length</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are you sure you want to delete this video?</string>
    <string name="token_expired">Your session has expired. Please log in again</string>
    <string name="no_connection">No Internet connection</string>
    <string name="connection_restored">Back online</string>
    <string name="notification_downloads_channel_title">Downloads</string>
    <string name="notification_downloads_channel_id" translatable="false">xtra_downloads_channel</string>
    <string name="storage_permission_title">The app needs storage permission</string>
    <string name="storage_permission_message">Storage permission is required to download videos.</string>
    <string name="permission_denied">Required permissions were denied</string>
    <string name="nothing_here">Nothing here</string>
    <string name="watch_live">Watch live</string>
    <string name="watch_rerun">Watch rerun</string>
    <string name="open_player">Open player</string>
    <string name="error_stream">Error when loading stream</string>
    <string name="dark">Dark</string>
    <string name="amoled">Black</string>
    <string name="light">Light</string>
    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="landscape_chat_width">Landscape chat width</string>
    <string name="portrait_column_count">Portrait column count</string>
    <string name="landscape_column_count">Landscape column count</string>
    <string name="internal_storage">Internal storage</string>
    <string name="save_to">Save to</string>
    <string name="no_storage_detected">No available storage detected (most likely the phone is connected to a computer).</string>
    <string name="rewind">Rewind</string>
    <string name="forward">Fast forward</string>
    <string name="seconds_full">%s seconds</string>
    <string name="unfollow">Unfollow %s?</string>
    <string name="now_following">You\'re now following %s</string>
    <string name="unfollowed">Unfollowed %s</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="search">Search</string>
    <string name="chat_replay_unavailable">Chat replay is unavailable</string>
    <string name="video_subscribers_only">This video is only available to subscribers</string>
    <string name="player_error">Player error. Retrying</string>
    <string name="picture_in_picture">Picture-in-Picture</string>
    <string name="adblock_not_working">TTV.LOL is offline. Disable Adblock to view streams in the meantime</string>
    <string name="adblock_desc">Uses the TTV.LOL api to load streams</string>
    <string name="adblock">Use Adblocker</string>
    <string name="source_vod_start">Start: %s</string>
    <string name="source_vod_end">End: %s</string>
    <string name="stream_ended">The stream has ended</string>
    <string name="viewers_count">%s viewers</string>
    <string name="views">%s views</string>
    <string name="download_pending">Pending</string>
    <string name="downloading_progress">Downloading: %d%%</string>
    <string name="pause">Pause</string>
    <string name="resume">Resume</string>
    <string name="error_loading_user">Error loading user profile</string>
    <string name="reply">Reply</string>
    <string name="copy_message">Copy message</string>
    <string name="view_profile">View profile</string>
    <string name="chat">Chat</string>
    <string name="recent_emotes">Recent</string>
    <string name="notification_playback_channel_title">Playback</string>
    <string name="notification_playback_channel_id" translatable="false">xtra_playback_channel</string>
    <string name="channels">Channels</string>
    <string name="watch_video">Watch full video</string>
    <string name="animated_emotes">Animated emotes</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="start">Start</string>
    <string name="set">Set</string>
    <string name="stop">Stop</string>
    <string name="hours">h</string>
    <string name="minutes">m</string>
    <string name="playback_will_stop">Playback will stop in %s</string>
    <string name="playback_will_stop_hours_minutes">Playback will stop in %1$s %2$s</string>
    <string name="timer_canceled">The timer has been canceled</string>
    <string name="trouble_logging_in">Having trouble logging in?</string>
    <string name="login_problem_solution">You can log in using an external browser. After you press \"Authorize\", a page with an error should appear. Copy the url, return here and click the \"Enter url\" button. Paste the url and click \"Log in\"</string>
    <string name="no_browser_found">No browser app found</string>
    <string name="browser_workaround">Your system browser is no longer supported. Please click the button below for a workaround</string>
    <string name="error">Error: %s</string>
    <string name="to_enter_url">Enter url</string>
    <string name="statusBarColor">Status bar color</string>
    <string name="navigationBarColor">Navigation bar color</string>
    <string name="show_follow_button">Show follow button</string>
    <string name="message_limit">Message limit</string>
    <string name="player_minimize">Show minimize button</string>
    <string name="player_channel">Show channel name</string>
    <string name="player_download">Show download button</string>
    <string name="player_sleep">Show sleep timer button</string>
    <string name="player_aspect">Show aspect ratio changer</string>
    <string name="player_chatbartoggle">Show chat input toggle</string>
    <string name="player_chattoggle">Show chat toggle button</string>
    <string name="player_fullscreen">Show fullscreen button</string>
    <string name="player_viewericon">Show icon next to view count</string>
    <string name="player_pause">Show pause button on livestreams</string>
    <string name="settings_chat">CHAT</string>
    <string name="token_random_deviceid">Random device id</string>
    <string name="api_helix">Helix client id</string>
    <string name="playback_speed">Playback speed</string>
    <string name="quality">Quality</string>
    <string name="player_volumebutton">Show volume button</string>
    <string name="video_type_archive">Past broadcast</string>
    <string name="video_type_highlight">Highlight</string>
    <string name="video_type_upload">Upload</string>
    <string name="all">All</string>
    <string name="type">Type</string>
    <string name="room_emote">Emote</string>
    <string name="room_followers_min">Followers %s</string>
    <string name="room_unique">Unique</string>
    <string name="room_slow">Slow %s</string>
    <string name="room_subs">Subs</string>
    <string name="timestamps">Show timestamps</string>
    <string name="select_language">Select language</string>
    <string name="recentMsg_limit">Recent message limit</string>
    <string name="player_gamesbutton">Show games button on vods</string>
    <string name="player_viewerlist">Open viewer list from view count</string>
    <string name="api_login">Get token for selected apis</string>
    <string name="api_helix_redirect">Helix redirect url</string>
    <string name="api_settings">Api settings</string>
    <string name="streams">Streams</string>
    <string name="player_minspeedlive">Live min playback speed</string>
    <string name="player_minspeedlive_summary">The minimum playback speed the player can use to fall back when trying to reach the target live offset. Leave empty for default</string>
    <string name="player_maxspeedlive">Live max playback speed</string>
    <string name="player_maxspeedlive_summary">The maximum playback speed the player can use to catch up when trying to reach the target live offset. Leave empty for default</string>
    <string name="player_targetoffset">Live target offset</string>
    <string name="player_targetoffset_summary">The player will attempt to get close to this live offset during playback if possible. Leave empty for default</string>
    <string name="player_buffer_min">Min Buffer</string>
    <string name="player_buffer_min_summary">The minimum duration of media that the player will attempt to ensure is buffered at all times, in milliseconds</string>
    <string name="player_buffer_max">Max Buffer</string>
    <string name="player_buffer_max_summary">The maximum duration of media that the player will attempt to buffer, in milliseconds</string>
    <string name="player_buffer_playback">Buffer for playback</string>
    <string name="player_buffer_playback_summary">The duration of media that must be buffered for playback to start or resume following a user action such as a seek, in milliseconds</string>
    <string name="player_buffer_rebuffer">Rebuffer</string>
    <string name="player_buffer_rebuffer_summary">The default duration of media that must be buffered for playback to resume after a rebuffer, in milliseconds</string>
    <string name="toggle_chat_bar">Toggle chat input</string>
    <string name="toggle_chat">Toggle chat</string>
    <string name="viewer_list">Viewer list</string>
    <string name="vod_games">Games in this video</string>
    <string name="disconnect_chat">Disconnect from chat</string>
    <string name="volume">Volume</string>
    <string name="aspect_ratio">Aspect ratio</string>
    <string name="restart_player">Restart player</string>
    <string name="settings_token_summary">disable adblock to use</string>
    <string name="include_gql_token">Include GQL token</string>
    <string name="sub_only_summary">For sub only content</string>
    <string name="bookmark">Bookmark</string>
    <string name="dark_theme_on">Dark theme on</string>
    <string name="dark_theme_off">Dark theme off</string>
    <string name="follow_system_theme">Change based on device theme</string>
</resources>