<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <RadioGroup
        android:id="@+id/sort"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sort"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <RadioButton
            android:id="@+id/time"
            style="@style/RadioButton"
            android:text="@string/upload_date"/>

        <RadioButton
            android:id="@+id/views"
            style="@style/RadioButton"
            android:text="@string/view_count"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/sortType"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/type"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <RadioButton
            android:id="@+id/typeArchive"
            style="@style/RadioButton"
            android:text="@string/video_type_archive"/>

        <RadioButton
            android:id="@+id/typeHighlight"
            style="@style/RadioButton"
            android:text="@string/video_type_highlight"/>

        <RadioButton
            android:id="@+id/typeUpload"
            style="@style/RadioButton"
            android:text="@string/video_type_upload"/>

        <RadioButton
            android:id="@+id/typeAll"
            style="@style/RadioButton"
            android:text="@string/all"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/period"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/period"
            android:textStyle="bold"
            android:layout_marginStart="5dp" />

        <RadioButton
            android:id="@+id/today"
            style="@style/RadioButton"
            android:text="@string/today"/>

        <RadioButton
            android:id="@+id/week"
            style="@style/RadioButton"
            android:text="@string/this_week"/>

        <RadioButton
            android:id="@+id/month"
            style="@style/RadioButton"
            android:text="@string/this_month"/>

        <RadioButton
            android:id="@+id/all"
            style="@style/RadioButton"
            android:text="@string/all_time"/>

    </RadioGroup>

    <Button
        android:id="@+id/apply"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/apply"/>

    <Button
        android:id="@+id/selectLang"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/select_language"/>

</LinearLayout>