<androidx.preference.PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory
        android:title="@string/settings_chat"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_default_chatEnableAnimatedEmotes"
        android:key="animatedGifEmotes"
        android:title="@string/animated_emotes"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/pref_default_chatEnableTimestamps"
        android:key="chat_timestamps"
        android:title="@string/timestamps"
        app:iconSpaceReserved="false" />

    <SeekBarPreference
        android:defaultValue="@integer/pref_default_chatLimit"
        android:key="chat_limit"
        android:max="1000"
        android:title="@string/message_limit"
        app:iconSpaceReserved="false"
        app:min="10"
        app:showSeekBarValue="true" />

    <SeekBarPreference
        android:defaultValue="@integer/pref_default_recentChatLimit"
        android:key="chat_recent_limit"
        android:max="@integer/pref_max_chatLimit"
        android:title="@string/recentMsg_limit"
        app:iconSpaceReserved="false"
        app:min="0"
        app:showSeekBarValue="true" />

    <PreferenceCategory
        android:title="@string/api_settings"
        app:iconSpaceReserved="false" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_apiToken"
        android:key="helix_client_id"
        android:maxLines="1"
        android:title="@string/api_helix"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

    <EditTextPreference
        android:defaultValue="@string/pref_default_apiRedirect"
        android:key="helix_redirect"
        android:maxLines="1"
        android:title="@string/api_helix_redirect"
        app:iconSpaceReserved="false"
        app:useSimpleSummaryProvider="true" />

</androidx.preference.PreferenceScreen>
