<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.google.android.flexbox.FlexboxLayout
        android:id="@+id/flexboxChatMode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimaryContainer"
        android:visibility="gone"
        app:flexWrap="wrap"
        app:justifyContent="space_evenly"
        tools:visibility="visible">

        <TextView
            android:id="@+id/textEmote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/room_emote"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:visibility="gone"
            tools:text="@string/room_followers_min"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textUnique"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/room_unique"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:visibility="gone"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textSlow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:visibility="gone"
            tools:text="@string/room_slow"
            tools:visibility="visible" />

        <TextView
            android:id="@+id/textSubs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:text="@string/room_subs"
            android:textAppearance="?attr/textAppearanceLabelMedium"
            android:textColor="?attr/colorOnPrimaryContainer"
            android:visibility="gone"
            tools:visibility="visible" />

    </com.google.android.flexbox.FlexboxLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingVertical="8dp"
            tools:listitem="@layout/chat_list_item" />

        <Button
            android:id="@+id/btnDown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_margin="16dp"
            android:text="@string/scroll_down"
            android:visibility="gone"
            tools:visibility="visible" />

    </FrameLayout>
</LinearLayout>
